# itmo-neura

./: .env.template  .gitignore  Dockerfile  README.md  deployment.yaml  main.py  pyproject.toml  pytest.ini
commands/: __init__.py  count.py  demotivate.py  generate.py  help.py  jpeg.py  start.py
config/: actions.py  app.py  bot.py  commands.py  constants.py  keys.py  replies.py  states.py
db/: config.py  crud.py  models.py
lib/: command.py  messages.py  middleware.py  state_manager.py
mc/: __init__.py  constants.py  formatters.py  markov_chain.py  phrase_generator.py  types.py  validators.py
middlewares/: __init__.py  callback_query.py  chat.py  collect.py  counter.py  documents.py  group_join.py  mention.py  reply.py
tests/: test_count_command.py
utils/: __init__.py  database.py  format.py  generator.py  messages.py  messages_database.py
utils/generator/: generator.c  generator.pyx  setup.py
