[tool.poetry]
name = "neura"
version = "0.1.0"
description = ""
authors = ["jarvis394 <tarnatovski@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pyTelegramBotAPI = "^4.5.1"
python-dotenv = "^0.19.2"
aiohttp = "^3.8.1"
aioschedule = "^0.5.2"
loguru = "^0.6.0"
aiofile = "^3.7.4"
aiosqlite = "^0.17.0"
SQLAlchemy = "^1.4.31"
greenlet = "^1.1.2"
pytest = "^7.0.1"
pytest-mock = "^3.7.0"
pytest-trio = "^0.7.0"
pytest-cov = "^3.0.0"
fastapi = "^0.74.0"
uvicorn = "^0.17.5"
pyngrok = "^5.1.0"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
